--- a/app/views/admin/countries/_form.html.haml
+++ b/app/views/admin/countries/_form.html.haml
@@ -5,6 +5,19 @@
       %ul
         - @country.errors.full_messages.each do |msg|
           %li= msg
+  .form-fields
+    .row
+      =f.label :name
+      =f.text_field :name
+    .row
+      =f.label :alpha_2
+      =f.text_field :alpha_2
+    .row
+      =f.label :alpha_3
+      =f.text_field :alpha_3
+    .row
+      =f.label :numeric
+      =f.text_field :numeric
 
   .actions
     = f.submit 'Save'
