--- a/app/views/admin/countries/index.html.haml
+++ b/app/views/admin/countries/index.html.haml
@@ -8,7 +8,11 @@
 
   - @countries.each do |country|
     %tr
-      %td= link_to 'Show', [:admin, country]
+      %td= country.id
+      %td= country.name
+      %td= country.alpha_2
+      %td= country.alpha_3
+      %td= country.numeric
       %td= link_to 'Edit', edit_admin_country_path(country)
       %td= link_to 'Destroy', [:admin, country], :method => :delete, :data => { :confirm => 'Are you sure?' }
 
