move topbar into shared subform

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -25,4 +25,4 @@
   .main-container
     = yield
 
-  = javascript_include_tag "application", "data-turbolinks-track" => true
+  = javascript_include_tag "admin", "data-turbolinks-track" => true
