--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,6 +25,6 @@
   .main-container
     = yield
 
-  = javascript_include_tag "admin", "data-turbolinks-track" => true
+  = javascript_include_tag "application", "data-turbolinks-track" => true
 
 
