--- a/app/views/businesses/search.html.haml
+++ b/app/views/businesses/search.html.haml
@@ -1,10 +1,29 @@
 =render 'shared/head'
 
--@businesses.each do |business|
-  .business
+.results.row
+  .map.large-4.columns
+    map goes here
+  .businesses.large-8.columns
 
-    %h2 
-      =link_to business.name, business_path(business)
-    %span= business.category
-    %p= business.formatted_address
-    %p= business.phone
+    .search.row
+      =form_tag search_businesses_path do
+        .large-2.columns
+          =label_tag :location, 'Displaying:', class: 'inline right'
+        .large-4.columns
+          =text_field_tag :location, @location, placeholder:'Where'
+        .large-4.columns
+          =text_field_tag :q, @q, placeholder:'What'
+        .large-2.columns
+          =submit_tag "S"
+
+    -@businesses.each do |business|
+      .business.row
+        .large-3.column
+          =image_tag (business.thumbnail_url || 'business_thumb_placeholder.png')
+        .large-9.column
+
+          %h2 
+            =link_to business.name, business_path(business)
+          %p= business.description
+          %span= business.formatted_address
+          %span= business.phone
