business/show page

--- a/app/views/businesses/search.html.haml
+++ b/app/views/businesses/search.html.haml
@@ -24,6 +24,6 @@
 
           %h2 
             =link_to business.name, business_path(business)
-          %p= business.description
+          .description= business.description
           %span= business.formatted_address
           %span= business.phone
