--- a/app/assets/stylesheets/main/index.sass
+++ b/app/assets/stylesheets/main/index.sass
@@ -4,6 +4,8 @@
  * put site-wide variables before the imports and they will be accessible
  */
  
+@import compass/css3/border-radius
+
 @import main
 @import pages
 @import businesses
