--- a/app/assets/stylesheets/main/main.css.sass
+++ b/app/assets/stylesheets/main/main.css.sass
@@ -1,1 +1,25 @@
-// this is where you should put all the site-wide styling
+// // this is where you should put all the site-wide styling
+
+
+input[type='text']
+  +border-radius(5px)
+  height: 2.0em
+
+
+
+.title-area
+  .logo
+    padding: 5px
+    display: block
+
+.top-bar-section 
+
+  ul
+    background: none
+   
+  li a:not(.button)
+    background: none
+    line-height: 2.5em
+    &:hover
+      background: none
+
