--- a/app/assets/stylesheets/main/pages.css.sass
+++ b/app/assets/stylesheets/main/pages.css.sass
@@ -3,4 +3,9 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 #pages-landing
-  margin: 0
+  
+  form.search
+    padding: 30% 0 0
+    .submit
+      cursor: pointer
+      height: 45px
