--- a/app/views/businesses/search.html.haml
+++ b/app/views/businesses/search.html.haml
@@ -5,16 +5,16 @@
     map goes here
   .businesses.large-8.columns
 
-    .search.row
-      =form_tag search_businesses_path do
-        .large-2.columns
-          =label_tag :location, 'Displaying:', class: 'inline right'
-        .large-4.columns
-          =text_field_tag :location, @location, placeholder:'Where'
-        .large-4.columns
-          =text_field_tag :q, @q, placeholder:'What'
-        .large-2.columns
-          =submit_tag "S"
+    / .search.row
+    /   =form_tag search_businesses_path do
+    /     .large-2.columns
+    /       =label_tag :location, 'Displaying:', class: 'inline right'
+    /     .large-4.columns
+    /       =text_field_tag :location, @location, placeholder:'Where'
+    /     .large-4.columns
+    /       =text_field_tag :q, @q, placeholder:'What'
+    /     .large-2.columns
+    /       =submit_tag "S"
 
     -@businesses.each do |business|
       .business.row
