move search to page head

--- a/app/assets/stylesheets/main/pages.css.sass
+++ b/app/assets/stylesheets/main/pages.css.sass
@@ -3,9 +3,6 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 #pages-landing
-  
-  form.search
-    padding: 30% 0 0
-    .submit
-      cursor: pointer
-      height: 45px
+  .top-bar .top-bar-section   
+    form.search
+      display: none
