--- a/app/assets/stylesheets/main/main.css.sass
+++ b/app/assets/stylesheets/main/main.css.sass
@@ -23,3 +23,18 @@ input[type='text']
     &:hover
       background: none
 
+  &.search
+    clear: right
+    ul
+      margin: 20px 20px 0 0
+
+  form.search
+    font-size: 18px
+    li
+      padding: 0 3px
+    label
+      font-weight: bold
+    .submit
+      cursor: pointer
+      height: 25px
+
