--- a/app/assets/stylesheets/main/businesses.css.sass
+++ b/app/assets/stylesheets/main/businesses.css.sass
@@ -2,10 +2,18 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 body.businesses
-  .businesses
-    background: white
+
+
     
   .business
+    background: rgba(255, 255, 255, 0.95)
+    padding: 5px 0 5px 0
+    margin-bottom: 5px
+    +border-radius(5px)
     h2
       line-height: 1
       margin: 0
+      
+  .thumb
+    width: 100%
+
