--- a/app/assets/stylesheets/main/pages.css.sass
+++ b/app/assets/stylesheets/main/pages.css.sass
@@ -3,6 +3,14 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 #pages-landing
+
   .top-bar .top-bar-section   
     form.search
       display: none
+ 
+  form.search
+    padding: 11em 0 0
+    .submit
+      cursor: pointer
+      height: 45px
+
