--- a/app/views/admin/businesses/edit.html.haml
+++ b/app/views/admin/businesses/edit.html.haml
@@ -1,7 +1,9 @@
 %h1 Editing business
 
-= render 'form'
+.row
+  .business.large-6.large-centered.columns
+    = render 'form'
 
-= link_to 'Show', [:admin, @business]
-\|
-= link_to 'Back', admin_businesses_path
+    = link_to 'Show', [:admin, @business]
+    \|
+    = link_to 'Back', admin_businesses_path
