--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -26,3 +26,6 @@
     = yield
 
   = javascript_include_tag "admin", "data-turbolinks-track" => true
+
+  :javascript
+    #{render '/layouts/gmap.js'}
