--- a/app/views/businesses/show.html.haml
+++ b/app/views/businesses/show.html.haml
@@ -3,8 +3,8 @@
 
 .results.row
   .map.large-4.columns
-    map goes here
-  .business.large-8.columns
+    #map-canvas
+  .business.large-8.columns{data: {lat: @business.lat, lng: @business.lng}}
 
     .large-3.column
       =image_tag (@business.thumbnail_url || 'business_thumb_placeholder.png')
