--- a/app/assets/stylesheets/main/businesses.css.sass
+++ b/app/assets/stylesheets/main/businesses.css.sass
@@ -10,10 +10,15 @@ body.businesses
     padding: 5px 0 5px 0
     margin-bottom: 5px
     +border-radius(5px)
+    min-height: 150px
     h2
       line-height: 1
       margin: 0
       
   .thumb
     width: 100%
+    display: inline-block
+    vertical-align: middle
+    
+  
 
