--- a/app/assets/stylesheets/main/main.css.sass
+++ b/app/assets/stylesheets/main/main.css.sass
@@ -6,7 +6,9 @@ input[type='text']
   height: 2.0em
 
 
-
+html, body
+  height: 100%
+	
 .title-area
   .logo
     padding: 5px
@@ -26,7 +28,7 @@ input[type='text']
   &.search
     clear: right
     ul
-      margin: 20px 20px 0 0
+      margin: -50px 500px 0 0
 
   form.search
     font-size: 18px
