--- a/app/views/pages/landing.html.haml
+++ b/app/views/pages/landing.html.haml
@@ -1,5 +1,6 @@
 - title 'Welcome'
 =render 'shared/head'
+.helper
 .main.row
   .large-8.small-centered.columns.row
     =form_tag search_businesses_path, class: 'search' do
