add zipcode to businesses

--- a/app/views/admin/businesses/_form.html.haml
+++ b/app/views/admin/businesses/_form.html.haml
@@ -28,6 +28,9 @@
         Geocode
 
     .row.large-10.large-centered.columns
+      =f.label :zipcode
+      =f.text_field :zipcode
+    .row.large-10.large-centered.columns
       =f.label :phone
       =f.text_field :phone
     .row.large-10.large-centered.columns
