--- a/app/views/businesses/show.html.haml
+++ b/app/views/businesses/show.html.haml
@@ -14,6 +14,7 @@
       %p= @business.category
       %p= @business.price_level
       %p= @business.formatted_address
+      %p= @business.zipcode
       %p= @business.phone
       %p= @business.website
       %p= @business.phone
