Playing with Logo, changed method of centering search bar

--- a/app/assets/stylesheets/main/main.css.sass
+++ b/app/assets/stylesheets/main/main.css.sass
@@ -11,7 +11,7 @@ html, body
 	
 .title-area
   .logo
-    padding: 5px
+    padding: 5px, 5px, 5px, 0px
     display: block
 
 .top-bar-section 
@@ -26,9 +26,9 @@ html, body
       background: none
 
   &.search
-    clear: right
     ul
-      margin: -50px 500px 0 0
+      display: block
+      margin-left: 35%
 
   form.search
     font-size: 18px
