--- a/app/views/shared/_search.html.haml
+++ b/app/views/shared/_search.html.haml
@@ -1,5 +1,5 @@
 =form_tag search_businesses_path, class: 'search' do
-  %ul.right
+  %ul.middle
     %li
       =label_tag :location, 'Displaying:', class: 'inline right'
     %li
