--- a/app/assets/stylesheets/main/businesses.css.sass
+++ b/app/assets/stylesheets/main/businesses.css.sass
@@ -2,11 +2,11 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 body.businesses
-  margin-top: 1.5em
+  margin-top: 3em
 
     
   .business
-    background: rgba(255, 255, 255, 0.95)
+    background: rgba(243, 248, 252, 0.95)
     padding: 5px 0 5px 0
     margin-bottom: 5px
     +border-radius(5px)
@@ -17,8 +17,7 @@ body.businesses
       
   .thumb
     width: 100%
-    display: inline-block
-    vertical-align: middle
+    vertical-align: bottom
     
   
 
