Added an image to the .head class to match the body bg

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -969,7 +969,7 @@ $input-font-size: emCalc(24px);
 
 // Background color for the top bar
 // old topbar-bg color rgba(86, 119, 86, 0.35)
-$topbar-bg: rgba(243, 248, 252, 1);
+$topbar-bg: rgba(243, 248, 252, .35);
 
 // Height and margin 135px
 $topbar-height: 50px;
