--- a/app/assets/stylesheets/main/pages.css.sass
+++ b/app/assets/stylesheets/main/pages.css.sass
@@ -4,6 +4,9 @@
 
 #pages-landing
 
+.head
+  background: rgba(243, 248, 252, 0)
+
   .top-bar .top-bar-section   
     form.search
       display: none
