--- a/app/assets/stylesheets/main/businesses.css.sass
+++ b/app/assets/stylesheets/main/businesses.css.sass
@@ -4,9 +4,11 @@
 body.businesses
   margin-top: 3em
 
+.head
+  background: #d2cec1 image_url('map_bg.jpg') no-repeat center left fixed
     
   .business
-    background: rgba(243, 248, 252, 0.95)
+    background: rgba(243, 248, 252, 1)
     padding: 5px 0 5px 0
     margin-bottom: 5px
     +border-radius(5px)
