--- a/app/assets/stylesheets/main/pages.css.sass
+++ b/app/assets/stylesheets/main/pages.css.sass
@@ -4,9 +4,6 @@
 
 #pages-landing
 
-.head
-  background: rgba(243, 248, 252, 0)
-
   .top-bar .top-bar-section   
     form.search
       display: none
@@ -14,8 +11,11 @@
   .main-container
     height: 100%
     
+  .head
+    background: image_url('head_bg.png') no-repeat center left fixed
+    
   .helper
-    height: 30%
+    height: 45%
     vertical-align: middle
     
   form.search
