--- a/app/assets/stylesheets/main/businesses.css.sass
+++ b/app/assets/stylesheets/main/businesses.css.sass
@@ -13,14 +13,15 @@ body.businesses
     
   .businesses
     position: fixed
-    top: 100px
+    top: 55px
     bottom: 0px
     right: 0px
     overflow-y: scroll
+    background: rgba(243, 248, 252, .85)
     
   .map
     position: fixed
-    top: 100px
+    top: 55px
     bottom: 0px
     left: 0px
     +border-radius(5px)
