--- a/app/views/businesses/show.html.haml
+++ b/app/views/businesses/show.html.haml
@@ -12,6 +12,7 @@
 
       %h2= @business.name
       %p= @business.category
+      %p= @business.tags.collect(&:name).join(', ')
       %p= @business.price_level
       %p= @business.formatted_address
       %p= @business.zipcode
