--- a/app/views/shared/_search.html.haml
+++ b/app/views/shared/_search.html.haml
@@ -1,4 +1,5 @@
 =form_tag search_businesses_path, class: 'search' do
+  =hidden_field_tag :filter_tags
   %ul.right
     %li
       =label_tag :location, 'Displaying:', class: 'inline right'
