--- a/app/assets/stylesheets/main/businesses.css.sass
+++ b/app/assets/stylesheets/main/businesses.css.sass
@@ -4,7 +4,9 @@
 body.businesses
   margin-top: 1.5em
 
-    
+  .tag-filter
+    background: rgba(255, 255, 255, 0.50)
+
   .business
     background: rgba(255, 255, 255, 0.95)
     padding: 5px 0 5px 0
