--- a/app/assets/stylesheets/main/main.css.sass
+++ b/app/assets/stylesheets/main/main.css.sass
@@ -43,8 +43,28 @@ html, body
       cursor: pointer
       height: 25px
 
+.results > .columns
+  padding: 0
+  
+  & > .row
+    margin: 0
+
+
 .map
-  height: 600px
+  position: absolute
+  top: 0px
+  bottom: 0px
+  left: 0px
+  height: 100%
+  overflow: hidden
+
 #map-canvas
   width: 100%
   height: 100%
+
+.results
+  position: absolute
+  top: 55px
+  bottom: 0px
+  right: 0px
+  left: 0px
