--- a/app/views/businesses/show.html.haml
+++ b/app/views/businesses/show.html.haml
@@ -2,7 +2,7 @@
 =render 'shared/head'
 
 .results.row
-  .map.large-4.columns
+  .map.large-4.columns.show-for-medium-up
     #map-canvas
   .business.large-8.columns{data: {lat: @business.lat, lng: @business.lng}}
 
