--- a/app/views/pages/landing.html.haml
+++ b/app/views/pages/landing.html.haml
@@ -10,5 +10,5 @@
         =text_field_tag :location, nil, placeholder:'Where'
       
       .large-2.columns
-        =image_tag 'search_button.png', class: 'submit', onclick: '$(this).parents("form").submit()'
+        =image_submit_tag 'search_button.png', class: 'submit'
     
