--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -2,7 +2,7 @@
 
   %nav.top-bar{data: {topbar: true} }
     %ul.title-area
-      =link_to image_tag('logo.png'), '#', class: 'logo'
+      =link_to image_tag('logo.png'), root_path, class: 'logo'
 
     %section.top-bar-section
       %ul.right
