use jim-nightshade for headings

--- a/app/assets/stylesheets/main/main.css.sass
+++ b/app/assets/stylesheets/main/main.css.sass
@@ -25,6 +25,7 @@ html, body
   li a:not(.button)
     background: none
     line-height: 2.5em
+    font-family: $heading-font
     &:hover
       background: none
 
@@ -45,7 +46,7 @@ html, body
 
 .results > .columns
   padding: 0
-  
+
   & > .row
     margin: 0
 
