--- a/app/assets/stylesheets/main/businesses.css.sass
+++ b/app/assets/stylesheets/main/businesses.css.sass
@@ -25,6 +25,7 @@ body.businesses
     h2
       line-height: 1
       margin: 0
+      font-family: $heading-font
       
   .thumb
     width: 100%
