--- a/app/views/admin/businesses/_form.html.haml
+++ b/app/views/admin/businesses/_form.html.haml
@@ -31,6 +31,15 @@
       .large-4.columns
         =label_tag 'New Tags (Comma Separated)'
         =text_field_tag 'business[new_tags]'
+
+    %fieldset.row.large-10.large-centered.columns
+      %legend Profile Pic
+
+      .large-6.columns
+        =image_tag @business.profile_pic.url(:medium)
+      .large-6.columns
+        =f.file_field :profile_pic
+
     .row.large-10.large-centered.columns
       =f.label :formatted_address
       =f.text_field :formatted_address
