--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -1,11 +1,11 @@
 .head.fixed
 
   %nav.top-bar{data: {topbar: true} }
-    %ul.title-area
+    %ul.title-area.right
       =link_to image_tag('logo.png'), root_path, class: 'logo'
 
     %section.top-bar-section
-      %ul.right
+      %ul.left
         %li
           =link_to "Login", "#"
         %li
