modified map settings, header height, logo/text

--- a/app/assets/stylesheets/main/main.css.sass
+++ b/app/assets/stylesheets/main/main.css.sass
@@ -13,9 +13,17 @@ html, body
   height: 60px
 	
 .title-area
+  display: inline
   .logo
     padding: 5px, 5px, 5px, 0px
-    display: block
+    
+  li
+    font-family: $heading-font
+    padding-right: 10px
+    font-size: 1.5em
+    display: inline
+    line-height: 2.5em
+    vertical-align: top
 
 .top-bar-section 
 
@@ -67,7 +75,7 @@ html, body
 
 .results
   position: absolute
-  top: 55px
+  top: 100px
   bottom: 0px
   right: 0px
   left: 0px
