Added the filters to the head.

--- a/app/views/businesses/_tag_filter.html.haml
+++ b/app/views/businesses/_tag_filter.html.haml
@@ -1,6 +1,6 @@
-.tag-filter.row
+.tag-filter
   %form#tag-filter.custom
-    %ul.large-block-grid-5.large-12.columns
+    %ul.large-block-grid-8.large-12.columns
       -Tag.filterable.each do |tag|
         %li
           =label_tag tag.name do
