--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -13,5 +13,8 @@
         %li
           =mail_to "contact@roguemaps.com", "Contact"
           
--#    %section.top-bar-section.search
--#      =render 'shared/search'
+    %section.top-bar-section.search
+      =render 'shared/search'
+          
+    %section.top-bar-section.filters
+      =render 'tag_filter'
