--- a/app/assets/stylesheets/main/businesses.css.sass
+++ b/app/assets/stylesheets/main/businesses.css.sass
@@ -14,7 +14,12 @@ body.businesses
     background: rgba(243, 248, 252, .85)
 
   .tag-filter
-    background: rgba(255, 255, 255, 0.50)
+    position: absolute
+    top: 70px
+    left: 200px
+    bottom: 0px
+    right: 0px
+    width: 100%
 
   .business
     background: rgba(243, 248, 252, 1)
@@ -28,7 +33,6 @@ body.businesses
       
   .thumb
     width: 100%
-    vertical-align: bottom
     
 
     
