Still working on the position of tags

--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -16,5 +16,5 @@
     %section.top-bar-section.search
       =render 'shared/search'
           
-    %section.top-bar-section.filters
-      =render 'tag_filter'
+-#    %section.top-bar-section.filters
+-#      =render 'tag_filter'
