moved the links to line up

--- a/app/assets/stylesheets/main/businesses.css.sass
+++ b/app/assets/stylesheets/main/businesses.css.sass
@@ -15,11 +15,13 @@ body.businesses
 
   .tag-filter
     position: absolute
+    z-index: 1000
     top: 70px
-    left: 200px
+    left: 180px
     bottom: 0px
     right: 0px
-    width: 100%
+    width: 87%
+    height: 2em
 
   .business
     background: rgba(243, 248, 252, 1)
