removed the merge notes

--- a/app/views/businesses/search.html.haml
+++ b/app/views/businesses/search.html.haml
@@ -1,16 +1,16 @@
 -content_for(:scripts){render '/layouts/gmap.js'}
-=render 'tag_filter'
 =render 'shared/head'
 
 .results.row
   .map.large-5.columns.show-for-medium-up
     #map-canvas
   .businesses.large-7.columns
+    =render 'tag_filter'
 
     -@businesses.each do |business|
       .business.row{data: {lat: business.lat, lng: business.lng}}
         .large-2.column
-          =image_tag ('business_thumb_placeholder.png'), class: "thumb"
+          =image_tag (business.profile_pic.url(:medium) || 'business_thumb_placeholder.png'), class: "thumb"
         .large-10.column
 
           %h2 
