--- a/app/assets/stylesheets/main/main.css.sass
+++ b/app/assets/stylesheets/main/main.css.sass
@@ -48,9 +48,10 @@ html, body
       padding: 0 3px
     label
       font-weight: bold
+      padding-top: 18px
     .submit
       cursor: pointer
-      height: 25px
+      height: 28px
 
 .results > .columns
   padding: 0
