--- a/app/assets/stylesheets/main/businesses.css.sass
+++ b/app/assets/stylesheets/main/businesses.css.sass
@@ -1,9 +1,16 @@
 // Place all the styles related to the businesses controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+$business_bg_color: rgba(243, 248, 252, .85)
+
 body.businesses
     
-
+  .showbg
+    background: $business_bg_color image_url('businesses_bg.gif') no-repeat
+    background-size: 100%
+    width: 100%
+    height: 100%
     
   .businesses
     position: absolute
@@ -11,7 +18,7 @@ body.businesses
     bottom: 0px
     right: 0px
     overflow-y: scroll
-    background: rgba(243, 248, 252, .85)
+    background: $business_bg_color
 
   .tag-filter
     position: absolute
@@ -29,13 +36,15 @@ body.businesses
     margin-bottom: 5px
     min-height: 150px
     h2
-      line-height: 1
+      line-height: 1.2
       margin: 0
       font-family: $heading-font
       
   .thumb
     width: 100%
     
+  .webface, .description, .details
+    margin-top: 25px
 
     
   
