--- a/app/views/businesses/show.html.haml
+++ b/app/views/businesses/show.html.haml
@@ -1,27 +1,33 @@
 -content_for(:scripts){render '/layouts/gmap.js'}
 =render 'shared/head'
 
+
 .results.row
   .map.large-4.columns.show-for-medium-up
     #map-canvas
-  .business.large-8.columns{data: {lat: @business.lat, lng: @business.lng}}
+    
+  .showbg
+    .business.large-8.columns{data: {lat: @business.lat, lng: @business.lng}}
 
-    .large-3.column
-      =image_tag (@business.thumbnail_url || 'business_thumb_placeholder.png')
-    .large-9.column
+      .large-3.column
+        =image_tag (@business.profile_pic.url(:medium) || 'business_thumb_placeholder.png'), class: "thumb"
+        %p= @business.phone
+        %p= @business.formatted_address
+      
+      .large-9.column
 
-      %h2= @business.name
-      %p= @business.category
-      %p= @business.tags.collect(&:name).join(', ')
-      %p= @business.price_level
-      %p= @business.formatted_address
-      %p= @business.zipcode
-      %p= @business.phone
-      %p= @business.website
-      %p= @business.phone
-      %p= @business.facebook_page
+        %h2= @business.name
+        %span= @business.category
+        %span= @business.price_level
+        %p= @business.tags.collect(&:name).join(', ')
+      
+      
 
-      .description
-        =@business.description
-      .details
-        =@business.details
+        .description
+          =@business.description
+        .details
+          =@business.details
+        
+        .webface
+          %span= link_to @business.website, @business.website
+          %span= link_to @business.facebook_page, @business.facebook_page
