--- a/app/assets/stylesheets/main/main.css.sass
+++ b/app/assets/stylesheets/main/main.css.sass
@@ -41,6 +41,7 @@ html, body
     ul
       display: block
       margin-left: 35%
+      margin-top: .5%
 
   form.search
     font-size: 18px
@@ -48,7 +49,7 @@ html, body
       padding: 0 3px
     label
       font-weight: bold
-      padding-top: 18px
+      padding-top: 10px
     .submit
       cursor: pointer
       height: 28px
