--- a/app/views/businesses/search.html.haml
+++ b/app/views/businesses/search.html.haml
@@ -1,6 +1,7 @@
 -content_for(:scripts){render '/layouts/gmap.js'}
 =render 'shared/head'
-=render 'tag_filter'
+.tag-filter-bg
+  =render 'tag_filter'
 
 .results.row
   .map.large-5.columns.show-for-medium-up
@@ -16,5 +17,6 @@
           %h2 
             =link_to business.name, business_path(business), class: 'business-name'
           .description= business.description
-          %span= business.formatted_address
-          %span= business.phone
+          .import_info
+            %span= business.formatted_address
+            %span= business.phone
