--- a/app/assets/stylesheets/main/businesses.css.sass
+++ b/app/assets/stylesheets/main/businesses.css.sass
@@ -7,7 +7,7 @@ $business_bg_color: rgba(243, 248, 252, .85)
 body.businesses
     
   .showbg
-    background: $business_bg_color image_url('businesses_bg.gif') no-repeat
+    background: rgba(243, 248, 252, .95) image_url('business_bg.png')
     background-size: 100%
     width: 100%
     height: 100%
@@ -27,7 +27,7 @@ body.businesses
     left: 160px
     bottom: 0px
     right: 0px
-    width: 88%
+    width: 87%
     height: 2em
   
   .tag-filter-bg
@@ -37,7 +37,7 @@ body.businesses
     margin-top: -35px
 
   .business
-    background: rgba(243, 248, 252, .35)
+    background: rgba(243, 248, 252, .65)
     padding: 5px 0 5px 0
     margin-bottom: 5px
     min-height: 150px
@@ -49,7 +49,6 @@ body.businesses
     
   .thumb
     width: 100%
-    margin-top: 30%
     
   .webface, .details
     margin-top: 25px
