--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -11,6 +11,8 @@
         %li
           =link_to "Login", "#"
         %li
+          =link_to "About", "#"
+        %li
           =mail_to "contact@roguemaps.com", "Contact"
           
     %section.top-bar-section.search
