Added Admin page, removed login link

--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -9,9 +9,7 @@
     %section.top-bar-section
       %ul.right
         %li
-          =link_to "Login", "#"
-        %li
-          =link_to "About", "#"
+          =link_to "About", "pages/about"
         %li
           =mail_to "contact@roguemaps.com", "Contact"
           
