Added about_logo.png updated styles to accomodate some of the content on the about page

--- a/app/assets/stylesheets/main/main.css.sass
+++ b/app/assets/stylesheets/main/main.css.sass
@@ -81,3 +81,23 @@ html, body
   bottom: 0px
   right: 0px
   left: 0px
+  
+.wrapper
+  position: absolute
+  height: 100em
+  top: 0px
+  bottom: 0px
+  right: 0px
+  left: 0px
+  
+  
+.about_content
+  position: absolute
+  height: 100%
+  top: 0px
+  bottom: 0px
+  right: 0px
+  left: 0px
+  overflow-y: scroll
+  border: red solid 3px
+
