--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -2,10 +2,13 @@
 
 =render 'shared/head'
 
-.main.row
+.results.row
   .large-8.small-centered.columns.row
-    .helper
-    %h2 This is the about page
+    .wrapper
+      .about_content
+        %h2 About Our Logo
+        =image_tag('about_logo.png')
+        %h1 Here is the text for the rest of the about sections
 
 
     
