add category to business/search

--- a/app/assets/stylesheets/main/businesses.css.sass
+++ b/app/assets/stylesheets/main/businesses.css.sass
@@ -46,6 +46,10 @@ body.businesses
       margin: 0
       font-family: $heading-font
       padding-top: 3px
+    h3
+      line-height: 1.2
+      margin: 0
+      font-size: 1em
     
   .thumb
     width: 100%
