--- a/app/assets/stylesheets/main/index.sass
+++ b/app/assets/stylesheets/main/index.sass
@@ -6,6 +6,9 @@
  
 @import compass/css3/border-radius
 
+// this imports the foundation mixins
+@import "foundation/foundation-global"
+
 $heading-font: 'Jim Nightshade'
 
 @import main
