--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -17,7 +17,7 @@
 
   %title= content_for?(:page_title) ? yield(:page_title) : "Rogue Maps"
 
-  = stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true
+  = stylesheet_link_tag "admin", media: "all", "data-turbolinks-track" => true
   = javascript_include_tag "vendor/custom.modernizr"
   = csrf_meta_tag
 
@@ -28,4 +28,4 @@
   = javascript_include_tag "admin", "data-turbolinks-track" => true
 
   :javascript
-    #{render '/layouts/gmap.js'}
+    #{render partial: '/layouts/gmap.js', locals: {places: true}}
