--- a/app/assets/stylesheets/main/main.css.sass
+++ b/app/assets/stylesheets/main/main.css.sass
@@ -84,11 +84,13 @@ html, body
   
 .wrapper
   position: absolute
-  height: 100em
+  height: 44.59em
   top: 0px
   bottom: 0px
   right: 0px
   left: 0px
+  background: rgba(243, 248, 252, .85)
+  overflow: scroll
   
   
 .about_content
@@ -99,11 +101,15 @@ html, body
   right: 0px
   left: 0px
   overflow-y: scroll
-<<<<<<< HEAD
-=======
-  border: red solid 3px
+
   
   h2
   text-align: center
->>>>>>> modified about styles a bit
+  padding: 0 5px 0px 5px
+  h1
+    text-align: center
+  p
+    text-align: left
+    text-indent: 50px
+
 
